--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "BASE_URL", "\"http://10.0.2.2:8080/qod/\"" // TODO Replace IP address for hardware device.
-        buildConfigField "String", "CLIENT_ID", "\"\"" // TODO Set correct client ID value.
+        buildConfigField "String", "BASE_URL", "\"http://192.168.1.9:8080/qod/\""
+        // TODO Replace IP address for hardware device.
+        buildConfigField "String", "CLIENT_ID", "\"638532830112-qgv6dev9hs8bg84vvq108dsh3ork8vsm.apps.googleusercontent.com\""
+        // TODO Set correct client ID value.
     }
     buildTypes {
         release {
